
syntax = "proto3";
package com.hugoserve.demo.proto;

option java_package = "com.hugoserve.demo.proto";
option java_multiple_files = true;

message AuthRequestDTO {
  string username = 1;
  string password = 2;
}
message AuthResponseDTO{
  string token=1;
}